test/library/standard/Random/RandomStreamInterface/choiceTestLowbounded.good
choiceTestLowbounded.chpl:6: In function 'main':
choiceTestLowbounded.chpl:12: error: input range must be bounded
